# cv-food-id2

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.id.md  README.md  pyproject.toml  requirements.txt
app/: gradio_demo.py
configs/: data.yaml  training.yaml  yolov8n_food.yaml
data/: README.md
data/nutrition/: dish_to_ingredients.csv  tkpi_lookup.csv
docs/: architecture.md  portion-accuracy.md  training-on-colab.md
notebooks/: 01_train_colab.ipynb  02_inference_demo.ipynb  02_train_kaggle.ipynb
scripts/: build_nutrition_db.py  download_datasets.py  export_tflite.py  foodseg103_from_hf.py  prepare_yolo_dataset.py  setup.sh  smoke_test.py  train_yolo.py
src/cvfoodid/: __init__.py  cli.py  i18n.py  pipeline.py
src/cvfoodid/detection/: __init__.py  detector.py
src/cvfoodid/nutrition/: __init__.py  calculator.py  database.py
src/cvfoodid/portion/: __init__.py  estimator.py  reference.py
tests/: test_calculator.py  test_i18n.py  test_nutrition_database.py  test_portion.py  test_smoke.py
